@@ -24,6 +24,7 @@ EXTRA_DIST = \
 	bug392331.vgtest bug392331.stdout.exp bug392331.stderr.exp \
 	bug392331_supp.vgtest bug392331_supp.stdout.exp bug392331_supp.stderr.exp \
 	bug392331.supp \
+	bug484480.vgtest bug484480.stderr.exp bug484480.stdout.exp \
 	cond_init_destroy.vgtest cond_init_destroy.stderr.exp \
 	cond_timedwait_invalid.vgtest cond_timedwait_invalid.stdout.exp \
 		cond_timedwait_invalid.stderr.exp \
@@ -71,6 +72,7 @@ EXTRA_DIST = \
 	pth_spinlock.vgtest pth_spinlock.stdout.exp pth_spinlock.stderr.exp \
 	rwlock_race.vgtest rwlock_race.stdout.exp rwlock_race.stderr.exp \
 	rwlock_test.vgtest rwlock_test.stdout.exp rwlock_test.stderr.exp \
+	sem_timedwait.vgtest sem_timedwait.stdout.exp sem_timedwait.stderr.exp \
 	shared_timed_mutex.vgtest shared_timed_mutex.stderr.exp \
 	shmem_abits.vgtest shmem_abits.stdout.exp shmem_abits.stderr.exp \
 	stackteardown.vgtest stackteardown.stdout.exp stackteardown.stderr.exp \
@@ -152,6 +154,7 @@ noinst_HEADERS = safe-pthread.h safe-semaphore.h
 check_PROGRAMS = \
 	annotate_hbefore \
 	bug327548 \
+	bug484480 \
 	cond_init_destroy \
 	cond_timedwait_invalid \
 	cond_timedwait_test \
@@ -242,6 +245,10 @@ endif
 
 if HAVE_GETADDRINFO
 check_PROGRAMS += getaddrinfo
+endif
+
+if HAVE_SEM_TIMEDWAIT
+check_PROGRAMS += sem_timedwait
 endif
 
 AM_CFLAGS   += $(AM_FLAG_M3264_PRI)
