@@ -1,0 +1,3 @@
+prereq: test -e ./sem_timedwait
+vgopts: -q
+prog: sem_timedwait
